2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-01-24  Andreas Kupries  <akupries@shaw.ca>

	* peg_interp.tcl (::grammar::peg::interp::MatchExpr):
	* peg_interp.man: [Bug 3163541] Fixed broken call to
	* pkgIndex.tcl: ict_match_token, missing the token. Bumped to
	  version 0.1.1.

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-07-18  Andreas Kupries  <andreask@activestate.com>

	* peg_interp.man (::grammar::peg::interp::parse): Added
	  description of what is expected from the nextcmd callback to
	  this command. Fixed reference to description of the AST format.

2008-05-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* peg_interp.man: Updated to changes in doctools (sub)section
	  reference handling.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-06-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* peg.man: Fixed [Bug 1735588], added text explaining the relation
	  to context-free grammars, per Lars Hellstrom's proposal.

2007-03-26  Andreas Kupries  <andreask@activestate.com>

	* peg.man: Uh, the section was put into the list instead of
	  after. Fixed. [Bug 1688650].

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* peg.man: Fixed all warnings due to use of now deprecated