@@ -1,2 +1,2 @@
-package ifneeded grammar::peg         0.1   [list source [file join $dir peg.tcl]]
+package ifneeded grammar::peg         0.2   [list source [file join $dir peg.tcl]]
 package ifneeded grammar::peg::interp 0.1.1 [list source [file join $dir peg_interp.tcl]]
